<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/btn_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_green"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        app:layout_constraintEnd_toStartOf="@+id/btn_green"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_red"
        app:layout_constraintTop_toTopOf="@id/btn_red" />

    <Button
        android:id="@+id/btn_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btn_yellow"
        app:layout_constraintTop_toTopOf="@id/btn_yellow" />

    <TextView
        android:id="@+id/txt_box_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#3C3939"
        android:text="@string/box_one"
        android:textAlignment="center"
        android:textColor="#EBE9E9"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_box_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="#EF0E0E"
        android:text="@string/box_three"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_box_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_box_two"
        app:layout_constraintTop_toTopOf="@+id/txt_box_two"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/txt_box_five"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#29DE1C"
        android:text="@string/box_five"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_box_two"
        app:layout_constraintEnd_toEndOf="@+id/txt_box_four"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_box_four"
        app:layout_constraintTop_toBottomOf="@+id/txt_box_four" />

    <TextView
        android:id="@+id/txt_box_four"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFEB3B"
        android:text="@string/box_four"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_box_five"
        app:layout_constraintEnd_toEndOf="@+id/txt_box_three"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_box_three"
        app:layout_constraintTop_toBottomOf="@+id/txt_box_three" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/how"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txt_box_two"
        app:layout_constraintTop_toBottomOf="@+id/txt_box_two" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/inst"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <TextView
        android:id="@+id/txt_box_two"
        android:layout_width="156dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="#807E7E"
        android:text="@string/box_two"
        android:textAlignment="center"
        android:textColor="#FAF8F8"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txt_box_one"
        app:layout_constraintTop_toBottomOf="@+id/txt_box_one" />

</androidx.constraintlayout.widget.ConstraintLayout>